Update CheckinButton state depending on distance and time since last visit
- msSinceLastCheckin(..) returns MAX_VALUE if there were no last checkin or user checkins are missing

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -86,6 +86,14 @@
     <string name="leave_project">Meld av</string>
     <string name="project_joined">Du deltar i dette turprosjektet</string>
     <string name="nearest_place_is">Din nærmeste turpost er %s</string>
+    <string name="cannot_locate_your_position">Vi finner ikke din posisjon</string>
+    <string name="position_missing">Posisjon mangler</string>
+    <string name="place_missing">Sted mangler</string>
+    <string name="cannot_locate_nearest_place">Vi finner ikke din nærmeste turpost</string>
+    <string name="user_checkins_missing">Vi finner ikke dine innsjekkinger</string>
+    <string name="checkins_missing">Innsjekkinger mangler</string>
+    <string name="register_visit">Registrer besøk</string>
+    <string name="visiting_nearest_place_is">Registrerer besøk på %s</string>
     <plurals name="checkin_daily_count">
         <item quantity="one">Kun en person har sjekket inn her idag.</item>
         <item quantity="other">%d personer har sjekket inn her idag.</item>
